--- a/src/App.css
+++ b/src/App.css
@@ -466,17 +466,25 @@
     visibility: visible;
   }
 
-  /* Modal Opening/Closing Effect:
-     Fade in and scale up */
+  /* Modal Opening/Closing Effect: Fade and Scale */
+  @keyframes modalFadeIn {
+    from {transform: scale(0.7);opacity: 0;}
+    to {transform: scale(1);opacity: 1;}
+  }
+
+  @keyframes modalFadeOut {
+    from {transform: scale(1);opacity: 1;}
+    to {transform: scale(0.7);opacity: 0;}
+  }
+
   .modal-effect .modal-content {
-    transform: scale(0.7);
-    opacity: 0;
-    transition: all 0.3s;
+    animation-name: modalFadeOut;
+    animation-duration: .3s;
   }
 
   .modal-show.modal-effect .modal-content {
-    transform: scale(1);
-    opacity: 1;
+    animation-name: modalFadeIn;
+    animation-duration: .3s;
   }
 
   /* Lock the scroll position on everything behind the modal (<html> element) */
