--- a/src/App.css
+++ b/src/App.css
@@ -132,7 +132,8 @@
     line-height: 1.13636364;
   }
 
-  h4 {
+  h4,
+  h5 {
     font-size: 1.125rem;
     line-height: 1.11111111;
   }
@@ -158,7 +159,8 @@
       line-height: 1.25;
     }
 
-    h4 {
+    h4,
+    h5 {
       line-height: 1.22222222;
     }
   }
@@ -501,7 +503,7 @@
    * window and the (buttons + map padding) (15px spacing and button, 10px spacing
    * between button and map edge).
    */
-  @media screen and (max-width: 950px) and (min-width: 601px) {
+  @media screen and (max-width: 1000px) and (min-width: 601px) {
     .info-window-container {
       width: calc(100vw - 300px - var(--map-inner-padding));
     }
@@ -609,6 +611,27 @@
     .info-window-contents-body {
       max-height: 150px;
     }
+  }
+
+  .api-error-message {
+    color: var(--primary-dark-color);
+    font-style: italic;
+    font-weight: 600;
+  }
+
+  .address-heading {
+    margin: 0.5em 0 0.25em;
+  }
+
+  .address-line {
+    margin: 0;
+  }
+
+  .info-window-image {
+    max-width: 100% !important;
+    height: auto !important;
+    display: block;
+    margin: 0.5em auto 0;
   }
 
 /* ====================== Modal Content ====================== */
