--- a/src/App.css
+++ b/src/App.css
@@ -434,7 +434,7 @@
   .map-container {
     order: 3;
     height: 100%;
-    background: blue;
+    background: var(--secondary-light-color);
     position: relative;
     flex: 2 1 auto;
   }
@@ -446,6 +446,35 @@
     right: 0;
     bottom: 0;
     top: 0;
+  }
+
+  /* ==== Loading GIF ==== */
+  .loading-mode {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .loading-gif {
+    margin: 0 auto;
+    max-width: 200px;
+    height: auto;
+    display: block;
+    position: relative;
+    text-align: center;
+    text-decoration: underline;
+  }
+
+  /* Show alt text nicely in case image is broken */
+  .loading-gif[alt]:after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--secondary-light-color);
+    content: attr(alt);
+    font-size: 1.25em;
   }
 
   /* ==== Marker Button ==== */
